compiler/testData/diagnostics/tests/deprecated/deprecatedError.diag.txt
/deprecatedError.kt:10:13: error: using 'C' is an error. alas
fun test(c: C) {
            ^
/deprecatedError.kt:11:5: error: using 'foo(String): Unit' is an error. alas
    foo("")
    ^
/deprecatedError.kt:12:5: error: using 'C' is an error. alas
    C()
    ^
